--- a/paper/jalangi.bib
+++ b/paper/jalangi.bib
@@ -31,7 +31,6 @@
  author = {Richards, Gregor and Lebresne, Sylvain and Burg, Brian and Vitek, Jan},
  title = {An analysis of the dynamic behavior of JavaScript programs},
  booktitle = {ACM SIGPLAN conference on Programming language design and implementation},
- series = {PLDI '10},
  year = {2010},
  pages = {1--12},
  publisher = {ACM},
@@ -40,7 +39,7 @@
 @inproceedings{Petrov:2012:RDW:2254064.2254095,
  author = {Petrov, Boris and Vechev, Martin and Sridharan, Manu and Dolby, Julian},
  title = {Race detection for web applications},
- booktitle = {Proceedings of the 33rd ACM SIGPLAN conference on Programming Language Design and Implementation},
+ booktitle = {33rd ACM SIGPLAN conference on Programming Language Design and Implementation},
  series = {PLDI '12},
  year = {2012},
  pages = {251--262},
@@ -50,9 +49,9 @@
 @inproceedings{Artzi:2011:FAT:1985793.1985871,
  author = {Artzi, Shay and Dolby, Julian and Jensen, Simon Holm and M{\o}ller, Anders and Tip, Frank},
  title = {A framework for automated testing of javascript web applications},
- booktitle = {Proceedings of the 33rd International Conference on Software Engineering},
- series = {ICSE '11},
- year = {2011},
+ booktitle = {33rd International Conference on Software Engineering},
+ series = {ICSE'11},
+ year = 2011,
  pages = {571--580},
  publisher = {ACM},
 } 
@@ -78,7 +77,7 @@
 @inproceedings{Saxena:2010:SEF:1849417.1849985,
  author = {Saxena, Prateek and Akhawe, Devdatta and Hanna, Steve and Mao, Feng and McCamant, Stephen and Song, Dawn},
  title = {A Symbolic Execution Framework for JavaScript},
- booktitle = {Proceedings of the 2010 IEEE Symposium on Security and Privacy},
+ booktitle = {IEEE Symposium on Security and Privacy},
  series = {SP '10},
  year = {2010},
  pages = {513--528},
@@ -133,7 +132,6 @@
  author = {Vikram, K. and Prateek, Abhishek and Livshits, Benjamin},
  title = {Ripley: automatically securing web 2.0 applications through replicated execution},
  booktitle = {16th ACM conference on Computer and communications security},
- series = {CCS '09},
  year = {2009},
  pages = {173--186},
  publisher = {ACM},
@@ -142,7 +140,7 @@
 @inproceedings{Pattabiraman:2010:DLD:1913797.1914375,
  author = {Pattabiraman, Karthik and Zorn, Benjamin},
  title = {DoDOM: Leveraging DOM Invariants for Web 2.0 Application Robustness Testing},
- booktitle = {Proceedings of the 2010 IEEE 21st International Symposium on Software Reliability Engineering},
+ booktitle = {IEEE 21st International Symposium on Software Reliability Engineering},
  series = {ISSRE '10},
  year = {2010},
  pages = {191--200},
@@ -151,7 +149,7 @@
 @inproceedings{Patil:2010:PFD:1772954.1772958,
  author = {Patil, Harish and Pereira, Cristiano and Stallcup, Mack and Lueck, Gregory and Cownie, James},
  title = {PinPlay: a framework for deterministic replay and reproducible analysis of parallel programs},
- booktitle = {Proceedings of the 8th annual IEEE/ACM international symposium on Code generation and optimization},
+ booktitle = {8th annual IEEE/ACM international symposium on Code generation and optimization},
  series = {CGO '10},
  year = {2010},
  pages = {2--11},
@@ -160,7 +158,7 @@
 @inproceedings{Narayanasamy:2006:ALO:1140277.1140303,
  author = {Narayanasamy, Satish and Pereira, Cristiano and Patil, Harish and Cohn, Robert and Calder, Brad},
  title = {Automatic logging of operating system effects to guide application-level architecture simulation},
- booktitle = {Proceedings of the joint international conference on Measurement and modeling of computer systems},
+ booktitle = {International conference on Measurement and modeling of computer systems},
  series = {SIGMETRICS '06/Performance '06},
  year = {2006},
  pages = {216--227},
@@ -171,7 +169,7 @@
 @inproceedings{blended,
  author = {Wei, Shiyi},
  title = {Blended analysis for JavaScript: a practical framework to analyze dynamic features},
- booktitle = {Proceedings of the 3rd annual conference on Systems, programming, and applications: software for humanity},
+ booktitle = {3rd annual conference on Systems, programming, and applications: software for humanity},
  series = {SPLASH '12},
  year = {2012},
  pages = {101--102},
@@ -181,7 +179,7 @@
 @inproceedings{Ratanaworabhan:2010:JCB:1863166.1863169,
  author = {Ratanaworabhan, Paruj and Livshits, Benjamin and Zorn, Benjamin G.},
  title = {JSMeter: comparing the behavior of JavaScript benchmarks with real web applications},
- booktitle = {Proceedings of the 2010 USENIX conference on Web application development},
+ booktitle = {USENIX conference on Web application development},
  series = {WebApps'10},
  year = {2010},
  pages = {3--3},
@@ -200,7 +198,6 @@
  author = {Clause, James and Li, Wanchun and Orso, Alessandro},
  title = {Dytan: a generic dynamic taint analysis framework},
  booktitle = {International symposium on Software testing and analysis},
- series = {ISSTA '07},
  year = {2007},
  pages = {196--206},
  publisher = {ACM},
@@ -229,7 +226,6 @@
  author = {James Newsome and Dawn Song},
  title = {Dynamic taint analysis for automatic detection, analysis, and signature generation of exploits on commodity software},
  booktitle = {12th Annual Network and Distributed System Security Symposium},
- series = {NDSS '05},
  year = {2005},
 } 
 
@@ -257,11 +253,9 @@ publisher={Springer}
 @inproceedings{Bjorner:2009:PFA:1532891.1532927,
  author = {Bj{\o}rner, Nikolaj and Tillmann, Nikolai and Voronkov, Andrei},
  title = {Path Feasibility Analysis for String-Manipulating Programs},
- booktitle = {15th International Conference on Tools and Algorithms for the Construction and Analysis of Systems},
- series = {TACAS '09},
+ booktitle = {Tools and Algorithms for the Construction and Analysis of Systems},
  year = {2009},
  pages = {307--321},
- publisher = {Springer-Verlag},
 } 
 
 @inproceedings{Luk:2005:PBC:1065010.1065034,
@@ -277,7 +271,7 @@ publisher={Springer}
 @inproceedings{Bruening:2003:IAD:776261.776290,
  author = {Bruening, Derek and Garnett, Timothy and Amarasinghe, Saman},
  title = {An infrastructure for adaptive dynamic optimization},
- booktitle = {International symposium on Code generation and optimization: feedback-directed and runtime optimization},
+ booktitle = {Code generation and optimization: feedback-directed and runtime optimization},
  series = {CGO '03},
  year = {2003},
  pages = {265--275},
@@ -302,7 +296,7 @@ month           = "June",
 @inproceedings{Xu:2003:FDR:859618.859633,
  author = {Xu, Min and Bodik, Rastislav and Hill, Mark D.},
  title = {A "flight data recorder" for enabling full-system multiprocessor deterministic replay},
- booktitle = {Proceedings of the 30th annual international symposium on Computer architecture},
+ booktitle = {30th annual international symposium on Computer architecture},
  series = {ISCA '03},
  year = {2003},
  pages = {122--135},
@@ -339,7 +333,7 @@ month           = "June",
 \
 @INPROCEEDINGS{warr, 
 author={Andrica, S. and Candea, G.}, 
-booktitle={Dependable Systems Networks (DSN), 2011 IEEE/IFIP 41st International Conference on}, 
+booktitle={Dependable Systems Networks (DSN)}, 
 title={WaRR: A tool for high-fidelity web application record and replay}, 
 year={2011}, 
 pages={403-410}, 
@@ -349,7 +343,7 @@ ISSN={1530-0889},}
 
 @INPROCEEDINGS{scarpe, 
 author={Joshi, S. and Orso, A.}, 
-booktitle={Software Maintenance, 2007. ICSM 2007. IEEE International Conference on}, 
+booktitle={Software Maintenance, 2007}, 
 title={SCARPE: A Technique and Tool for Selective Capture and Replay of Program Executions}, 
 year={2007}, 
 pages={234-243}, 
@@ -360,7 +354,7 @@ ISSN={1063-6773},}
 @inproceedings{Saff:2005:ATF:1101908.1101927,
  author = {Saff, David and Artzi, Shay and Perkins, Jeff H. and Ernst, Michael D.},
  title = {Automatic test factoring for java},
- booktitle = {Proceedings of the 20th IEEE/ACM international Conference on Automated software engineering},
+ booktitle = {20th IEEE/ACM international Conference on Automated software engineering},
  series = {ASE '05},
  year = {2005},
  isbn = {1-58113-993-4},
